--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,12 @@ env:
   MONGODB_DB_NAME: gha-demo
 jobs:
   test:
+    strategy:
+      matrix:
+        run: ['ubuntu-latest','windows10']
+
     environment: testing
-    runs-on: ubuntu-latest
+    runs-on: strategy.matrix.run
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb+srv
       MONGODB_CLUSTER_ADDRESS: ${{secrets.MONGODB_CLUSTER_ADDRESS}}
