--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,13 @@ jobs:
   test:
     strategy:
       matrix:
-        run: ['ubuntu-latest','windows10']
+        run: [ubuntu-latest,windows10,windows11]
+        exclude:
+           windows11
+        
 
     environment: testing
-    runs-on: strategy.matrix.run
+    runs-on: ${{matrix.run}}
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb+srv
       MONGODB_CLUSTER_ADDRESS: ${{secrets.MONGODB_CLUSTER_ADDRESS}}
