--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
       - name: works
-        uses: ./.github/actions
+        uses: ./.github/actions/
       - name: Run server
         run: npm start & npx wait-on http://127.0.0.1:${{env.PORT}} # requires MongoDB Atlas to accept requests from anywhere!
       - name: Run tests
