--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -1,9 +1,15 @@
 name: 'action'
 description: 'make a lab'
+inputs:
+  caching: 
+    description: 'input entering'
+    required: false
+    default: 'true'
 runs: 
   using: 'composite'
   steps:
     - name: Cache dependencies
+      if: inputs.caching == 'true'
       uses: actions/cache@v3
       with:
           path: ~/.npm
