--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
         uses: actions/checkout@v3
       - name: works
         uses: ./.github/actions/
+        with:
+          caching: 'true'
       - name: Run server
         run: npm start & npx wait-on http://127.0.0.1:${{env.PORT}} # requires MongoDB Atlas to accept requests from anywhere!
       - name: Run tests
