--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: works
         uses: ./.github/actions/
         with:
-          caching: 'true'
+          caching: 'false'
       - name: Run server
         run: npm start & npx wait-on http://127.0.0.1:${{env.PORT}} # requires MongoDB Atlas to accept requests from anywhere!
       - name: Run tests
