--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: 'input entering'
     required: false
     default: 'true'
+outputs:
+  coco:
+    description: 'outputoo'
+    value: ${{steps.so.outputs.op}}
 runs: 
   using: 'composite'
   steps:
@@ -16,6 +20,11 @@ runs:
           key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
       run: npm ci
+
+      shell: bash
+    - name: out
+      id: so
+      run: echo "op='${{inuts.caching}}'">> $GITHUB_OUTPUT
       shell: bash
 
    
