--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,7 @@ jobs:
       MONGODB_PASSWORD: ${{secrets.MONGODB_PASSWORD}}
       PORT: 8080
     outputs:
-      name: momo
-      value: ${{steps.io.outputs.coco}}
+      name: ${{steps.io.outputs.coco}}
     container:
       image: node:16
     steps:
@@ -51,4 +50,4 @@ jobs:
           echo "MONGODB_USERNAME: $MONGODB_USERNAME"
           echo "${{ env.PORT }}"
       - name: print output
-        run: echo '${{needs.test.outputs.momo}}'
+        run: echo '${{needs.test.outputs.name}}'
